// vim: set noexpandtab:
syntax = "proto3";

import "google/protobuf/timestamp.proto";

service Fero {
	rpc SignPayload           (SignRequest)      returns (SignResponse);
	rpc SetSecretKeyThreshold (ThresholdRequest) returns (ThresholdResponse);
	rpc SetUserKeyWeight      (WeightRequest)    returns (WeightResponse);
	rpc GetLogs               (LogRequest)       returns (LogResponse);
}

message Identification {
	uint64 secretKeyId = 1;
	repeated bytes signatures = 2;
	string secretKeyName = 3;
}

message HsmLog {
	uint32 id = 1;
	uint32 command = 2;
	uint32 data_length = 3;
	uint32 session_key = 4;
	uint32 target_key = 5;
	uint32 second_key = 6;
	uint32 result = 7;
	uint32 systick = 8;
	bytes hash = 9;
}

message LogEntry {
	int32 id = 1;
	enum OperationType {
		SIGN = 0;
		THRESHOLD = 1;
		WEIGHT = 2;
		ADD_SECRET = 3;
		ADD_USER = 4;
	}
	OperationType operation_type = 2;
	google.protobuf.Timestamp timestamp = 3;
	enum OperationResult {
		SUCCESS = 0;
		FAILURE = 1;
	}
	OperationResult result = 4;
	Identification ident = 5;
	repeated HsmLog hsm_logs = 6;
	bytes hash = 7;
}

message SignRequest {
	Identification identification = 1;
	bytes payload = 2;
}

message ThresholdRequest {
	Identification identification = 1;
	int32 threshold = 2;
}

message WeightRequest {
	Identification identification = 1;
	uint64 userKeyId = 2;
	int32 weight = 3;
}

message LogRequest {
	int32 minIndex = 1;
}

message SignResponse {
	bytes payload = 1;
}

message ThresholdResponse {}

message WeightResponse {}

message LogResponse {
    repeated LogEntry logs = 1;
}
